@@ -1,6 +1,7 @@
 package kr.co.strato.portal.workload.v2.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -49,7 +50,7 @@ public class StatefulSetServiceV2 extends WorkloadCommonV2 {
 	public List<StatefulSetDto> getJobByOwnerUid(Long kubeConfigId, String ownerUid) throws Exception  {
 		List<StatefulSet> list = statefulSetAdapterService.getListFromOwnerUid(kubeConfigId, ownerUid);
 		if(list != null && list.size() > 0) {
-			List<StatefulSetDto> newList = list.stream().map(j -> toDto(kubeConfigId, j)).toList();
+			List<StatefulSetDto> newList = list.stream().map(j -> toDto(kubeConfigId, j)).collect(Collectors.toList());
 			return newList;
 		}
 		return null;
